fixed bug with overflow on safari

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -12,6 +12,7 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  overflow-x: hidden;
 
   @include tablet-landscape {
     font-size: 56.25%;
